finalize vsg post, add GA

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,9 @@ layout: default
     </header>
     <div class="post-content" itemprop="articleBody">
         {{ content }}
+
+        <br>
+        <hr>
+        Comments? You are welcome to start a discussion on <a href="https://github.com/Sturla22/Sturla22.github.io/discussions/categories/general">Github</a>.
     </div>
 </article>
