--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <style>
     #cookie-notice {padding: 0.5rem 1rem; display: none; text-align: center; position: fixed; top: 0; width: calc(100% - 2rem); background: #222; color: rgba(255,255,255,1);}
     #cookie-notice a {display: inline-block; cursor: pointer; margin-left: 0.5rem;}
