--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,5 +1,12 @@
 <figure class="image">
+    {% if include.no_link %}
+    {% else %}
     <figcaption style="text-align: right;" id="{{ include.file | slugify }}"><a style="color: inherit; text-decoration: underline;" href="#{{ include.file | slugify }}">{{ include.file }}</a></figcaption>
+    {% endif %}
   <img src="{{ include.dir }}{{ include.file }}" alt="{{ include.description }}">
+  {% if include.figure_num %}
   <figcaption style="padding: 0.5rem 2rem;"><strong>Figure {{ include.figure_num }}</strong>: {{ include.description }}</figcaption>
+  {% else %}
+  <figcaption style="text-align: center">{{ include.description }}</figcaption>
+  {% endif %}
 </figure>
