--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
         {% endif %}
     </header>
     <div class="post-content" itemprop="articleBody">
-        {{ content }}
+        {{ content | extlinks }}
 
         <br>
         <hr>
