--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,11 @@ layout: default
             Published:
             <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%Y-%m-%d" }}</time>
             <meta itemprop="mainEntityOfPage" content="{{ site.url }}" />
+            {% if page.last_modified_at %}
+            Last modified at:
+            <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%Y-%m-%d" }}</time>
+            <meta itemprop="mainEntityOfPage" content="{{ site.url }}" />
+            {% endif %}
         </p>
         {% if page.tags %}
         <p class="post-meta">
