Update vsg post

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -8,7 +8,7 @@
             date.setTime(date.getTime() + (days*24*60*60*1000));
             expires = "; expires=" + date.toUTCString();
         }
-        document.cookie = name + "=" + value + expires + "; SameSite=Strict; path=/";
+        document.cookie = name + "=" + value + expires + "; SameSite=Lax; path=/";
     }
     function readCookie(name) {
         var nameEQ = name + "=";
