--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <style>
     #cookie-notice {padding: 0.5rem 1rem; display: none; text-align: center; position: fixed; top: 0; width: calc(100% - 2rem); background: #222; color: rgba(255,255,255,1);}
-    #cookie-notice a {display: inline-block; cursor: pointer; margin-left: 0.5rem;}
+    #cookie-notice a {display: inline-block; cursor: pointer; margin-left: 0.5rem; color: #fff}
     @media (max-width: 767px) {
         #cookie-notice span {display: block; padding-top: 3px; margin-bottom: 1rem;}
         #cookie-notice a {position: relative; bottom: 4px;}
